--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ body {
 body {
   color: #fff;
   background-color: var(--grass-green);
+  text-transform: uppercase;
+
   /* background-color: var(--color-palet-2); */
   /* background-image: linear-gradient(var(--color-palet-1), var(--color-palet-2)); */
 }
