--- a/src/components/standings/Standings.css
+++ b/src/components/standings/Standings.css
@@ -55,6 +55,10 @@
   margin-top: 4rem;
 }
 
+.footerImgMobile{
+    display: none;
+  }
+
 @media only screen and (max-width: 600px) {
   .countdownInfo h1 {
     font-size: 1.6rem;
@@ -83,5 +87,13 @@
     margin-top: 4rem;
   }
 
+  .footerImg{
+    display: none;
+  }
+
+  .footerImgMobile{
+    display: unset;
+    padding: 0rem 1rem;
+  }
 
 }
