--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,8 @@ body {
 .footerImg {
   width: 100%;
   padding: 0rem 1rem;
-  position: static;
+  position: fixed;
   bottom: 0;
+  left: 0;
 }
 
