--- a/src/components/standings/Standings.css
+++ b/src/components/standings/Standings.css
@@ -55,9 +55,9 @@
   margin-top: 4rem;
 }
 
-.footerImgMobile{
-    display: none;
-  }
+.footerImgMobile {
+  display: none;
+}
 
 @media only screen and (max-width: 600px) {
   .countdownInfo h1 {
@@ -87,13 +87,15 @@
     margin-top: 4rem;
   }
 
-  .footerImg{
+  .footerImg {
     display: none;
   }
 
-  .footerImgMobile{
+  .footerImgMobile {
     display: unset;
     padding: 0rem 1rem;
+    position: static;
+    padding-bottom: 1rem;
+    left: 0;
   }
-
 }
