--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,20 +1,16 @@
 .header {
-    padding: 1rem;
     font-family: OswaldBold;
     font-size: 1.25rem;
     position: relative;
-    padding-top: 2rem;
 }
 
 .header .footballLogo {
     width: 8rem;
-    position: absolute;
-    left: 3rem;
-    top: -0.5rem;
+    margin-bottom: -3rem;
+    margin-right: 2rem;
 }
 
 .header nav {
-    /* mx-auto flex space-x-6 justify-between */
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -23,19 +19,37 @@
 }
 
 .header hr {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     height: 0.1rem;
     border: none;
     background-color: white;
 }
 
-.header.active,
+.header .headerLinks{
+    display: flex;
+    align-items: center;
+    margin-left: 3rem;
+}
+
+.header .active {
+    color: var(--gold);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    border-color: var(--gold);
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .header .headerLink:hover {
     color: var(--gold);
 }
 
 .header .lockLink {
     font-size: 1.2rem;
+    margin-right: 3rem;
 }
 
 @media only screen and (max-width: 600px) {
