started on match styling

--- a/src/components/tipsBuilder/TipsBuilder.css
+++ b/src/components/tipsBuilder/TipsBuilder.css
@@ -127,4 +127,19 @@
 
 
 
-  
+.matchSection h2 {
+    font-size: 1.125rem;
+    font-family: RobotoMedium;
+    margin-bottom: 1rem;
+}
+
+
+
+
+/* Match.css  ???*/
+
+.matchBackground {
+    background-color: var(--darkest-green);
+    margin-bottom: 2rem;
+    padding: 2rem 0rem;
+}
