--- a/src/components/prize/Prize.css
+++ b/src/components/prize/Prize.css
@@ -7,14 +7,22 @@
 
 .prize .prizesContainer {
     position: relative;
-    margin-top: 10rem;
+    margin-top: 7rem;
+}
+.prize .prizesImg {
+    /* width: 100rem; */
+    width: 100%;
+    /* height: auto; */
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .prize .rules {
     position: absolute;
     top: 0;
     right: 5%;
-    max-width: 32rem;
+    max-width: 30rem;
     border: solid;
     border-width: 1px;
     padding: 3rem;
@@ -30,7 +38,7 @@
 }
 
 .prize .rules li {
-    font-size: 1rem;
+    font-size: 0.9rem;
     margin-top: 1rem;
     text-transform: none;
 }
