--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -1,3 +1,4 @@
+/* Menu ********************************/
 .adminMenu {
 
 }
@@ -31,4 +32,27 @@
 .adminMenu .active,
 .adminMenu .adminLink:hover {
     color: var(--gold);
+}
+
+
+/* Overview ********************************/
+
+.overview {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    flex-wrap: wrap;
+}
+
+.overview h2 {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-family: OswaldBold;
+}
+
+.overview .notApproved {
+    margin-top: 3rem;
 }
