--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -93,6 +93,7 @@
     text-align: center;
     font-size: 1.5rem;
     margin-top: 1rem;
+    font-weight: bold;
 }
 
 .createMatch .createMatchForm {
@@ -107,6 +108,61 @@
     width: 100%;
     border-radius: 10px;
 }
-.createMatch .createMatchForm select {}
-.createMatch .createMatchForm img {}
+.createMatch .createMatchForm input[type=datetime-local],
+.createMatch .createMatchForm select {
+    display: flex;
+    width: 100%;
+    height: 2.25rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+    padding: 0.25rem;
+    color: black;
+}
+.createMatch .createMatchForm img {
+    width: 3rem;
+    position: absolute;
+    top: 0.3rem;
+    left: -3.7rem;
+}
+
+.createMatch .createMatchForm .countryContainer {
+    position: relative;
+}
+
+.createMatch .createMatchForm .submitBtn {
+    background-color: var(--gold);
+    color: black;
+    border-radius: 10px;
+    width: 60%;
+    height: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.showMatches {
+    margin-top: 5rem;
+}
+
+.showMatches table {
+    border-radius: 10px;
+    border: 1px white solid;
+    min-width: 100%;
+    table-layout: fixed;
+}
+
+.showMatches table thead tr {
+
+}
+.showMatches table tbody tr td,
+.showMatches table thead tr th {
+    text-align: center;
+    padding: .5rem;
+    border-bottom: 1px white solid;
+    width: 1%;
+}
+
 
