--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -77,6 +77,7 @@
 
 /* Machtes ****************/
 
+.editMatch,
 .createMatch {
     width: 35rem;
     display: flex;
@@ -89,6 +90,7 @@
 
 }
 
+.editMatch h2,
 .createMatch h2 {
     text-align: center;
     font-size: 1.5rem;
@@ -96,6 +98,7 @@
     font-weight: bold;
 }
 
+.editMatch .editMatchForm,
 .createMatch .createMatchForm {
     display: flex;
     flex-direction: column;
@@ -104,20 +107,27 @@
     margin-right: auto;
     margin-top: 1rem;
 }
+
+.editMatch .editMatchForm label,
 .createMatch .createMatchForm label {
     width: 100%;
     border-radius: 10px;
+    margin-top: 1rem;
 }
+
+.editMatch .editMatchForm input[type=datetime-local],
+.editMatch .editMatchForm select,
 .createMatch .createMatchForm input[type=datetime-local],
 .createMatch .createMatchForm select {
     display: flex;
     width: 100%;
     height: 2.25rem;
     border-radius: 10px;
-    margin-bottom: 1rem;
     padding: 0.25rem;
     color: black;
 }
+
+.editMatch .editMatchForm img,
 .createMatch .createMatchForm img {
     width: 3rem;
     position: absolute;
@@ -125,6 +135,7 @@
     left: -3.7rem;
 }
 
+.editMatch .editMatchForm .countryContainer,
 .createMatch .createMatchForm .countryContainer {
     position: relative;
 }
@@ -137,14 +148,57 @@
     height: 3rem;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
     font-weight: bold;
     text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editMatch .editMatchForm input[type=number] {
+    height: 2.5rem;
+    border-radius: 10px;
+    color: black;
+    padding: .5rem;
+}
+
+.editMatch .editMatchForm .actionBtns {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+
+.editMatch .editMatchForm .actionBtns .submitBtn {
+    background-color: var(--gold);
+    color: black;
+    border-radius: 10px;
+    height: 3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editMatch .editMatchForm .actionBtns .deleteBtn {
+    background-color: var(--red);
+    color: white;
+    border-radius: 10px;
+    height: 3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .showMatches {
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 
 .showMatches table {
