--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -51,6 +51,7 @@
 .header .lockLink {
     font-size: 1.2rem;
     margin-right: 3rem;
+    margin-left: 1rem;
 }
 
 @media only screen and (max-width: 600px) {
@@ -61,8 +62,8 @@
     .header .headerLinks {
         margin-left: unset;
         gap: unset;
-        /* padding: 1rem; */
-        /* gap: 1rem; */
+        padding: 1rem;
+        gap: 1rem;
     }
 
     .header .headerLink {
