--- a/src/components/prize/Prize.css
+++ b/src/components/prize/Prize.css
@@ -1,8 +1,12 @@
 .prize {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: space-between; */
-
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
 }
 
 .prize .prizesContainer {
@@ -19,14 +23,15 @@
 }
 
 .prize .rules {
-    position: absolute;
+    /* position: absolute;
     top: 0;
-    right: 5%;
+    right: 5%; */
     max-width: 30rem;
     border: solid;
     border-width: 1px;
     padding: 3rem;
     border-radius: 10px;
+    margin-top: 3rem;
 }
 
 .prize .rules h4 {
@@ -41,4 +46,11 @@
     font-size: 0.9rem;
     margin-top: 1rem;
     text-transform: none;
+}
+
+@media only screen and (max-width:640px) {
+    .prize .rules {
+        max-width: unset;
+        width: 100%;
+    }
 }
