--- a/src/components/tipsBuilder/TipsBuilder.css
+++ b/src/components/tipsBuilder/TipsBuilder.css
@@ -81,7 +81,7 @@
   }
   
   /* Hide the browser's default checkbox */
-  .container .checkboxInput {
+  .container .inputCheckbox {
     position: absolute;
     opacity: 0;
     cursor: pointer;
