--- a/src/components/utils/Loader.css
+++ b/src/components/utils/Loader.css
@@ -3,7 +3,7 @@
   }
 
   #ajaxloader .outer {
-      border: 5px solid rgba(0, 229, 183, 0.9);
+      border: 5px solid var(--gold);
       opacity: 0.9;
       width: 60px;
       height: 70px;
@@ -28,7 +28,7 @@
       display: block;
       width: 30px;
       height: 30px;
-      border: 5px solid rgba(0, 229, 183, 0.9);
+      border: 5px solid var(--gold);
       opacity: 0.9;
       border-radius: 50%;
       border-left-color: transparent;
