--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -234,7 +234,10 @@
     table-layout: fixed;
 }
 
-.showMatches table thead tr {}
+
+.showMatches table tbody tr td.countryCell {
+    text-align: left;
+}
 
 .showMatches table tbody tr td,
 .showMatches table thead tr th {
@@ -248,6 +251,7 @@
     height: 1.7rem;
     width: 1.7rem;
     object-fit: cover;
+    margin-left: 30%;
 }
 
 .showMatches table thead tr th {
@@ -335,6 +339,12 @@
 }
 
 
+@media only screen and (max-width:1000px) {
+    .showMatches table tbody tr td img {
+        margin-left: 10%;
+    }
+}
+
 @media only screen and (max-width:600px) {
     .adminMenu .adminLinks {
         gap: unset;
@@ -350,4 +360,9 @@
         height: 2rem;
         left: -2.7rem;
     }
+
+    .showMatches table tbody tr td img {
+        margin-left: 2%;
+    }
+
 }
