secure prize page

--- a/src/components/prize/Prize.css
+++ b/src/components/prize/Prize.css
@@ -52,6 +52,13 @@
     text-transform: none;
 }
 
+.trophyIcon {
+    color: var(--gold);
+}
+.wait-text {
+    font-family: RobotoMedium;
+}
+
 @media only screen and (max-width:640px) {
     .prize .rules {
         max-width: unset;
